<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    style="@style/item_note">

    <ImageView
        android:id="@+id/ivType"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/study_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        style="@style/tv_content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/et_note_title_hint"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourite"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight=".8"
        app:layout_constraintStart_toEndOf="@id/ivType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/et_time_hint"
        android:textSize="12sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight=".2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/tv_content" />

    <Button
        android:id="@+id/btnFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_favourite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivType"
        style="@style/btn_item_note" />

</androidx.constraintlayout.widget.ConstraintLayout>